make-a-wish-salesforce/src/objects/Support_User_Access__mdt.object
<CustomObject>
    <description>It contains the credentials for Salesforce Support User</description>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <description>Contains Client Secret</description>
        <label>Client Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grant_Type__c</fullName>
        <label>Grant Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <description>Hold password for Salesforce Support</description>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>URL of the Org</description>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <description>Contains Salesforce User Username</description>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Support User Access</label>
    <pluralLabel>Support User Access</pluralLabel>
</CustomObject>